--- a/style.css
+++ b/style.css
@@ -22,4 +22,20 @@ body{
     min-height: 300px;
     max-height: 30%;
     aspect-ratio: .6;
+    padding: .5rem;
+}
+.inputBox{
+    width: 100%;
+    height: 20%;
+    padding: 1rem;
+    border: 2px solid black;
+    outline: none;
+}
+.discriptionBox{
+    width: 100%;
+    height: 80%;
+    padding: 1rem;
+    border: 2px solid black;
+    border-top: 0px;
+    outline: none;
 }
