--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,300;0,400;1,500&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -9,12 +10,12 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 2rem;
+    padding-top: 2.5rem;
 }
 .header{
     border: 2px solid;
-    width: 90%;
-    height: 10%;
+    width: 80%;
+    min-height: 10%;
     border-bottom: none;
     padding: .7rem;
     display: flex;
@@ -34,37 +35,69 @@ body{
 }
 .container{
     border: 2px solid;
-    width: 90%;
-    display: flex;
+    width: 80%;
     flex-wrap: wrap;
-    padding: 1rem;
+    padding: 15% 0px;
     gap: 1rem;
-    place-items: center;
-    min-height: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .card{
     border: 2px solid;
     max-height: 300px;
-    aspect-ratio: .6;
+    aspect-ratio: .7;
     padding: .5rem;
+    background-color: rgba(255, 255, 255, 0.336);
 }
 .inputBox{
     width: 100%;
     height: 20%;
-    padding: 1rem;
+    padding: .5rem;
     border: 2px solid black;
     outline: none;
     background-color: grey;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .discriptionBox{
     width: 100%;
     height: 80%;
-    padding: 1rem;
+    padding: .5rem;
     border: 2px solid black;
     border-top: 0px;
     background-color: grey;
     outline: none;
+    font-weight: 600;
+    font-size: 1rem;
 }
 ::placeholder{
-    color: black;
+    color: rgba(0, 0, 0, 0.588);
+    font-family: 'Kanit', sans-serif;
+    font-weight: 500;
+    text-transform: uppercase;
+    font-size: .9rem;
+}
+@media (max-width: 500px) {
+    body{
+        height: 100vh;
+    }
+    .container{
+        min-height: 65%;
+    }
+    .createBtn,
+    .deleteBtn {
+        font-size: .7rem;
+        font-weight: 600;
+    }
+    .card{
+        width: 100%;
+    }
+    
+}
+@media (min-width: 1800px) {
+    .container{
+        padding: 12%;
+    }
 }
